--- a/programme-GMT+6.html
+++ b/programme-GMT+6.html
@@ -399,30 +399,21 @@
 <a name="THU"></a>
 <h2 style="color:#B40431;">Thursday, 9 September 2021</h2>
 <hr size="1">
-                  <tr>
-                    <td>
-		       <a name="OPENING"></a>
-			    <h3>WED 13:15-13:30 GMT+6- <a style="color:#B40431;">OPENING</a></h3>
-			       <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
-			         See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION SCHEDULE</a> for other time zones</strong>
-		               </p>
-                    </td>
-		    <hr>
-                   </tr>
+<hr>
                    <tr>
                     <td>
-		       <a name="SESSION-2"></a>
-                       <h3>WED 13:30-14:30 GMT+6 - <a style="color:#B40431;">Session 1 (Keynote Speaker): </a>
-			    (Chair: Peter Csaba Olveczky)</h3>
+		       <a name="SESSION-5"></a>
+                       <h3>WED 13:30-14:30 GMT+6 - <a style="color:#B40431;">Session 5 (Keynote Speaker): Wil van der Aalst</a>
+			    (Chair: Antonio Cerone)</h3>
 			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
 			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION SCHEDULE</a> for other time zones</strong></p>
                          <ul>
-                           <li><strong><a style="color:#B40431;">Model Checking and Machine Learning Joining Forces<a></strong></li>
+                           <li><strong><a style="color:#B40431;">Concurrency and Objects Matter: Disentangling the Fabric of Real Operational Processes<a></strong></li>
                          </ul>
 			 <p class="text">
                            <a class="link"
 			      style="color:#B40431;"
-                              href="keynotes.html#KIM">Abstract and Speaker's Biography</a> |
+                              href="keynotes.html#WIL">Abstract and Speaker's Biography</a> |
                            The session video recording will be linked from here.</p>
                       </p>
                     </td>
@@ -430,13 +421,14 @@
                    </tr>
                    <tr>
                     <td>
-                       <h3>WED 14:30-15:00 GMT+6 - SHORT BREAK</h3>
+		      <a name="SESSION-6"></a><a name="PAPER-"></a><a name="PAPER-"></a><a name="PAPER-"></a>
+                      <h3>WED 14:30-15:00 GMT+6 - SHORT BREAK</h3>
                     </td>
 		    <hr>	   
                   </tr>               
                  <tr>
                     <td>
-                      <h3>WED 15:00-16:30 GMT+6 - <a style="color:#B40431;">Session 2: <a> (Chair: TBA)</h3>
+                      <h3>WED 15:00-16:30 GMT+6 - <a style="color:#B40431;">Session 6: <a> (Chair: TBA)</h3>
 			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
 			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION SCHEDULE</a> for other time zones</strong></p>
                          <a class="link"
@@ -476,7 +468,8 @@
                   </tr>               
                   <tr>
                     <td>
-                      <h3>WED 17:30-18:30 GMT+6 - <a style="color:#B40431;">Session 3: <a> (Chair: TBA)</h3>
+		      <a name="SESSION-7"></a><a name="PAPER-"></a><a name="PAPER-"></a>
+                      <h3>WED 17:30-18:30 GMT+6 - <a style="color:#B40431;">Session 7: <a> (Chair: TBA)</h3>
 			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
 			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION SCHEDULE</a> for other time zones</strong></p>
                          <a class="link"
@@ -507,69 +500,45 @@
                     </td>
 		    <hr>	   
                   </tr>               
-                  <tr>
-                    <td>
-                      <h3>WED 19:00-20:30 GMT+6 - <a style="color:#B40431;">Session 4: <a> (Chair: TBA)</h3>
-			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
-			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION. SCHEDULE</a> for other time zones</strong></p>
-                         <a class="link"
-			    style="color:#B40431;"
-                            href=""></a>
-                         The session video recording will be linked from here.
-                      <ul class="text">
-                        <li><strong><a style="color:#B40431;"></a><br>
-				</strong>
-                          <a class="link"
-			     style="color:#B40431;"
-                             href=""></a>
-			</li>
-			<br>
-			<li><strong><a style="color:#B40431;"></a><br>
-			        </strong>
-                          <a class="link"
-			     style="color:#B40431;"
-                             href=""></a>
-	                 </li>
-			<br>
-			<li><strong><a style="color:#B40431;"></a><br>
-			        </strong>
-                          <a class="link"
-			     style="color:#B40431;"
-                             href=""></a>
-	                 </li>								       										       
-                      </ul>
-                    </td>
-		    <hr>			    
-                  </tr>
-
-<hr size="1">
-<a name="FRI"></a>
-<h2 style="color:#B40431;">Friday, 10 September 2021</h2>
-<hr size="1">
-                  <tr>
-                    <td>
-		       <a name="OPENING"></a>
-			    <h3>WED 13:15-13:30 GMT+6- <a style="color:#B40431;">OPENING</a></h3>
-			       <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
-			         See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION SCHEDULE</a> for other time zones</strong>
-		               </p>
-                    </td>
-		    <hr>
-                   </tr>
                    <tr>
                     <td>
-		       <a name="SESSION-2"></a>
-                       <h3>WED 13:30-14:30 GMT+6 - <a style="color:#B40431;">Session 1 (Keynote Speaker): </a>
-			    (Chair: Peter Csaba Olveczky)</h3>
+		       <a name="SESSION-8"></a>
+                       <h3>WED 13:30-14:30 GMT+6 - <a style="color:#B40431;">Session 8 (Keynote Speaker): Grigore Rosu</a>
+			    (Chair: Peter Csaba &Ouml;lveczky</h3>
 			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
 			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION SCHEDULE</a> for other time zones</strong></p>
                          <ul>
-                           <li><strong><a style="color:#B40431;">Model Checking and Machine Learning Joining Forces<a></strong></li>
+                           <li><strong><a style="color:#B40431;">Formal Design, Implementation and Verification of Blockchain Languages<a></strong></li>
                          </ul>
 			 <p class="text">
                            <a class="link"
 			      style="color:#B40431;"
-                              href="keynotes.html#KIM">Abstract and Speaker's Biography</a> |
+                              href="keynotes.html#GRIGORE">Abstract and Speaker's Biography</a> |
+                           The session video recording will be linked from here.</p>
+                      </p>
+                    </td>
+                    <hr>
+                   </tr>
+<hr size="1">
+<a name="FRI"></a>
+<h2 style="color:#B40431;">Friday, 10 September 2021</h2>
+<hr size="1">
+<hr>
+                   </tr>
+                   <tr>
+                    <td>
+		       <a name="SESSION-9"></a>
+                       <h3>WED 13:30-14:30 GMT+6 - <a style="color:#B40431;">Session 9 (Keynote Speaker): Alan Dix</a>
+			    (Chair: Antonio Cerone)</h3>
+			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
+			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION SCHEDULE</a> for other time zones</strong></p>
+                         <ul>
+                           <li><strong><a style="color:#B40431;">Qualitative–Quantitative Reasoning: thinking informally about formal things<a></strong></li>
+                         </ul>
+			 <p class="text">
+                           <a class="link"
+			      style="color:#B40431;"
+                              href="keynotes.html#ALAN">Abstract and Speaker's Biography</a> |
                            The session video recording will be linked from here.</p>
                       </p>
                     </td>
