--- a/programme-GMT+6.html
+++ b/programme-GMT+6.html
@@ -266,9 +266,7 @@
 			    (Chair: Peter Csaba &Ouml;lveczky)</h3>
 			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
 			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION SCHEDULE</a> for other time zones</strong></p>
-                         <ul>
-                           <li><strong><a style="color:#B40431;">Model Checking and Machine Learning Joining Forces<a></strong></li>
-                         </ul>
+                         <h3><a style="color:#B40431;">Model Checking and Machine Learning Joining Forces<a></h3>
 			 <p class="text">
                            <a class="link"
 			      style="color:#B40431;"
