--- a/programme-GMT+6.html
+++ b/programme-GMT+6.html
@@ -368,22 +368,22 @@
                             href=""></a>
                          The session video recording will be linked from here.
                       <ul class="text">
-                        <li><strong><a style="color:#B40431;"></a><br>
-				</strong>
+                        <li><strong><a style="color:#B40431;">A Mechanically Verified Theory of Contracts</a><br>
+				St&eacute;phane Kastenbaum, Benoît Boyer and Jean-Pierre Talpin</strong>
                           <a class="link"
 			     style="color:#B40431;"
                              href=""></a>
 			</li>
 			<br>
-			<li><strong><a style="color:#B40431;"></a><br>
-			        </strong>
+			<li><strong><a style="color:#B40431;">Certifying Choreography Compilation</a><br>
+			        Lu&iacute;s Cruz-Filipe, Fabrizio Montesi and Marco Peressotti</strong>
                           <a class="link"
 			     style="color:#B40431;"
                              href=""></a>
 	                 </li>
 			<br>
-			<li><strong><a style="color:#B40431;"></a><br>
-			        </strong>
+			<li><strong><a style="color:#B40431;">A Complete Semantics of K and Its Translation to Isabelle</a><br>
+			        Liyi Li and Elsa Gunter</strong>
                           <a class="link"
 			     style="color:#B40431;"
                              href=""></a>
@@ -401,13 +401,11 @@
                    <tr>
                     <td>
 		       <a name="SESSION-5"></a>
-                       <h3>WED 13:30-14:30 GMT+6 - <a style="color:#B40431;">Session 5 (Keynote Speaker): Wil van der Aalst</a>
+                       <h3>THU 13:30-14:30 GMT+6 - <a style="color:#B40431;">Session 5 (Keynote Speaker): Wil van der Aalst</a>
 			    (Chair: Antonio Cerone)</h3>
 			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
 			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION SCHEDULE</a> for other time zones</strong></p>
-                         <ul>
-                           <li><strong><a style="color:#B40431;">Concurrency and Objects Matter: Disentangling the Fabric of Real Operational Processes<a></strong></li>
-                         </ul>
+                         <h3><a style="color:#B40431;">Concurrency and Objects Matter: Disentangling the Fabric of Real Operational Processes<a></h3>
 			 <p class="text">
                            <a class="link"
 			      style="color:#B40431;"
@@ -420,13 +418,13 @@
                    <tr>
                     <td>
 		      <a name="SESSION-6"></a><a name="PAPER-"></a><a name="PAPER-"></a><a name="PAPER-"></a>
-                      <h3>WED 14:30-15:00 GMT+6 - SHORT BREAK</h3>
+                      <h3>THU 14:30-15:00 GMT+6 - SHORT BREAK</h3>
                     </td>
 		    <hr>	   
                   </tr>               
                  <tr>
                     <td>
-                      <h3>WED 15:00-16:30 GMT+6 - <a style="color:#B40431;">Session 6: <a> (Chair: TBA)</h3>
+                      <h3>THU 15:00-16:30 GMT+6 - <a style="color:#B40431;">Session 6: <a> (Chair: TBA)</h3>
 			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
 			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION SCHEDULE</a> for other time zones</strong></p>
                          <a class="link"
@@ -460,7 +458,7 @@
                   </tr>
                   <tr>
                     <td>
-                       <h3>WED 16:30-17:30 GMT+6 - LONG BREAK</h3>
+                       <h3>THU 16:30-17:30 GMT+6 - LONG BREAK</h3>
                     </td>
 		    <hr>	   
                   </tr>               
@@ -494,7 +492,7 @@
                   </tr>
                   <tr>
                     <td>
-                       <h3>WED 18:30-19:00 GMT+6 - SHORT BREAK</h3>
+                       <h3>THU 18:30-19:00 GMT+6 - SHORT BREAK</h3>
                     </td>
 		    <hr>	   
                   </tr>               
@@ -505,9 +503,7 @@
 			    (Chair: Peter Csaba &Ouml;lveczky</h3>
 			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
 			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION SCHEDULE</a> for other time zones</strong></p>
-                         <ul>
-                           <li><strong><a style="color:#B40431;">Formal Design, Implementation and Verification of Blockchain Languages<a></strong></li>
-                         </ul>
+                         <h3><a style="color:#B40431;">Formal Design, Implementation and Verification of Blockchain Languages<a></h3>
 			 <p class="text">
                            <a class="link"
 			      style="color:#B40431;"
@@ -526,13 +522,11 @@
                    <tr>
                     <td>
 		       <a name="SESSION-9"></a>
-                       <h3>WED 13:30-14:30 GMT+6 - <a style="color:#B40431;">Session 9 (Keynote Speaker): Alan Dix</a>
+                       <h3>DFRI 13:30-14:30 GMT+6 - <a style="color:#B40431;">Session 9 (Keynote Speaker): Alan Dix</a>
 			    (Chair: Antonio Cerone)</h3>
 			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
 			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION SCHEDULE</a> for other time zones</strong></p>
-                         <ul>
-                           <li><strong><a style="color:#B40431;">Qualitative–Quantitative Reasoning: thinking informally about formal things<a></strong></li>
-                         </ul>
+                         <h3><a style="color:#B40431;">Qualitative–Quantitative Reasoning: thinking informally about formal things<a></h3>
 			 <p class="text">
                            <a class="link"
 			      style="color:#B40431;"
@@ -544,7 +538,7 @@
                    </tr>
                    <tr>
                     <td>
-                       <h3>WED 14:30-15:00 GMT+6 - SHORT BREAK</h3>
+                       <h3>FRI 14:30-15:00 GMT+6 - SHORT BREAK</h3>
                     </td>
 		    <hr>	   
                   </tr>               
@@ -584,7 +578,7 @@
                   </tr>
                   <tr>
                     <td>
-                       <h3>WED 16:30-17:30 GMT+6 - LONG BREAK</h3>
+                       <h3>FRI 16:30-17:30 GMT+6 - LONG BREAK</h3>
                     </td>
 		    <hr>	   
                   </tr>               
@@ -617,7 +611,7 @@
                   </tr>
                   <tr>
                     <td>
-                       <h3>WED 18:30-19:00 GMT+6 - SHORT BREAK</h3>
+                       <h3>FRI 18:30-19:00 GMT+6 - SHORT BREAK</h3>
                     </td>
 		    <hr>	   
                   </tr>               
@@ -658,7 +652,7 @@
                   <tr>
                     <td>
 		       <a name="CLOSING"></a>
-			    <h3>FRI 17:00-18:00 GMT+6- <a style="color:#B40431;">CLOSING</a></h3>
+			    <h3>FRI 17:30-19:45 GMT+6- <a style="color:#B40431;">CLOSING</a></h3>
                     </td>
                   </tr>
 <br>
@@ -684,8 +678,10 @@ and the following <strong><a style="color:#B40431;">accepted papers</a></strong>
             <br>&nbsp;
 	</li>
 	<li><strong><a style="color:#B40431;">ComplexityParser: an automatic tool for certifying poly-time complexity of Java programs</a><br>
-    Emmanuel Hainry, Emmanuel Jeandel, Romain Péchoux and Olivier Zeyen
-    </strong>
+		Emmanuel Hainry, Emmanuel Jeandel, Romain Péchoux and Olivier Zeyen
+            </strong>
+	    <br>[<a class="link" style="color:#B40431;" href="#PAPER-">presentation schedule</a>]
+            <br>&nbsp;
 	</li>
 	<li><strong><a style="color:#B40431;">On the Correctness Problem for Serializability</a>
 		<br>
@@ -729,7 +725,7 @@ and the following <strong><a style="color:#B40431;">accepted papers</a></strong>
 	</li>
 	<li><strong><a style="color:#B40431;">Certifying Choreography Compilation</a>
 		<br>
-		Luís Cruz-Filipe, Fabrizio Montesi and Marco Peressotti
+		Lu&iacute;s Cruz-Filipe, Fabrizio Montesi and Marco Peressotti
             </strong>
 	    <br>
 	    [<a class="link" style="color:#B40431;" href="#PAPER-22">presentation schedule</a>]
@@ -758,7 +754,7 @@ and the following <strong><a style="color:#B40431;">accepted papers</a></strong>
 	<li><strong><a style="color:#B40431;">A Mechanically Verified Theory of Contracts</a>
 		[<a class="link" style="color:#B40431;" href="#PAPER-39">presentation schedule</a>]
 		<br>
-		Stéphane Kastenbaum, Benoît Boyer and Jean-Pierre Talpin
+		St&eacute;phane Kastenbaum, Benoît Boyer and Jean-Pierre Talpin
              </strong>
 	     <br>
 	     <br>&nbsp;
