--- a/programme-GMT+6.html
+++ b/programme-GMT+6.html
@@ -97,6 +97,7 @@
     <th style='border-top:none'><a style="color:#B40431;">+10:00</a></th>
     <th style='border-top:none'><a style="color:#B40431;">+12:00</a></th>
   </tr>
+	
   <tr align = "left">
     <td style="border-bottom:none;"><strong><a style="color:#B40431"; href="#WED";>WEDNESDAY</a></stong></td>
     <td><strong><a style="color:#B40431;" href="#OPENING">OPENING</a></stong></td>
@@ -217,8 +218,130 @@
     <td><strong>23:00</strong></td>
     <td><strong>1:00(*)</strong></td>
   </tr>
+	
+  <tr align = "left">
+    <td style="border-bottom:none;"><strong><a style="color:#B40431"; href="#WED";>WEDNESDAY</a></stong></td>
+    <td><strong><a style="color:#B40431;" href="#OPENING">OPENING</a></stong></td>
+    <td><strong>15 min.</strong></td>  
+    <td><strong>1:15</strong></td>
+    <td><strong>2:15</strong></td>
+    <td><strong>3:15</strong></td>
+    <td><strong>4:15</strong></td>
+    <td><strong>7:15</strong></td>
+    <td><strong>8:15</strong></td>
+    <td><strong>9:15</strong></td>
+    <td><strong>10:15</strong></td>
+    <td><strong>11:15</strong></td>
+    <td><strong>11:45</strong></td>	  
+    <td><strong>12:15</strong></td>
+    <td><strong>12:45</strong></td>
+    <td><strong>13:15</strong></td>
+    <td><strong>14:15</strong></td>
+    <td><strong>15:15</strong></td>  
+    <td><strong>16:15</strong></td>
+    <td><strong>16:45</strong></td>
+    <td><strong>17:15</strong></td>
+    <td><strong>19:15</strong></td>
+  </tr>
+  <tr align = "left">
+    <td style="border-bottom:none;"><strong><a style="color:#B40431"; href="#THU";>THURSDAY</a></stong></td>
+    <td><strong><a style="color:#B40431;" href="#SESSION-1">1. Kim Larsen's Keynote Talk</a></strong></td>
+    <td><strong>60 min.</strong></td>  
+    <td><strong>1:30</strong></td>
+    <td><strong>2:30</strong></td>
+    <td><strong>3:30</strong></td>
+    <td><strong>4:30</strong></td>
+    <td><strong>7:30</strong></td>
+    <td><strong>8:30</strong></td>
+    <td><strong>9:30</strong></td>
+    <td><strong>10:30</strong></td>
+    <td><strong>11:30</strong></td>
+    <td><strong>12:00</strong></td>	  
+    <td><strong>12:30</strong></td>
+    <td><strong>13:00</strong></td>
+    <td><strong>13:30</strong></td>
+    <td><strong>14:30</strong></td>
+    <td><strong>15:30</strong></td>  
+    <td><strong>16:30</strong></td>
+    <td><strong>17:00</strong></td>
+    <td><strong>17:30</strong></td>
+    <td><strong>19:30</strong></td>
+  </tr>
+  <tr align = "left">
+    <td style="border-top:none;border-bottom:none;"><strong><a style="color:#B40431"; href="#THU";>9 September</a></strong></td>
+    <td><strong><a style="color:#B40431;" href="#SESSION-2">2. Efficient Model Checking Methods</a></strong></td>
+    <td><strong>90 min.</strong></td>  
+    <td><strong>3:00</strong></td>
+    <td><strong>4:00</strong></td>
+    <td><strong>5:00</strong></td>
+    <td><strong>6:00</strong></td>
+    <td><strong>9:00</strong></td>
+    <td><strong>10:00</strong></td>
+    <td><strong>11:00</strong></td>
+    <td><strong>12:00</strong></td>
+    <td><strong>13:00</strong></td>
+    <td><strong>13:30</strong></td>	  
+    <td><strong>14:00</strong></td>
+    <td><strong>14:30</strong></td>
+    <td><strong>15:00</strong></td>
+    <td><strong>16:00</strong></td>
+    <td><strong>17:00</strong></td>  
+    <td><strong>18:00</strong></td>
+    <td><strong>18:30</strong></td>
+    <td><strong>20:00</strong></td>
+    <td><strong>21:00</strong></td>
+  </tr>
+  <tr align = "left">
+    <td style="border-top:none;border-bottom:none;"></td>
+    <td><strong><a style="color:#B40431;" href="#SESSION-3">3. Database and Distributed Transactions</a></strong></td>
+    <td><strong>60 min.</strong></td>  
+    <td><strong>5:30</strong></td>
+    <td><strong>6:30</strong></td>
+    <td><strong>7:30</strong></td>
+    <td><strong>8:30</strong></td>
+    <td><strong>11:30</strong></td>
+    <td><strong>12:30</strong></td>
+    <td><strong>13:30</strong></td>
+    <td><strong>14:30</strong></td>
+    <td><strong>15:30</strong></td>
+    <td><strong>16:00</strong></td>	  
+    <td><strong>16:30</strong></td>
+    <td><strong>17:00</strong></td>
+    <td><strong>17:30</strong></td>
+    <td><strong>18:30</strong></td>
+    <td><strong>19:30</strong></td>  
+    <td><strong>20:30</strong></td>
+    <td><strong>22:00</strong></td>
+    <td><strong>22:30</strong></td>
+    <td><strong>23:30</strong></td>
+  </tr>
+  <tr align = "left">
+    <td style="border-top:none;border-bottom:none;"></td>
+    <td><strong><a style="color:#B40431;" href="#SESSION-4">4. Formalization and Verification in Coq and Isabelle</a></strong></td>
+    <td><strong>90 min.</strong></td>  
+    <td><strong>7:00</strong></td>
+    <td><strong>8:00</strong></td>
+    <td><strong>9:00</strong></td>
+    <td><strong>10:00</strong></td>
+    <td><strong>13:00</strong></td>
+    <td><strong>14:00</strong></td>
+    <td><strong>15:00</strong></td>
+    <td><strong>16:00</strong></td>
+    <td><strong>17:00</strong></td>
+    <td><strong>17:30</strong></td>	  
+    <td><strong>18:00</strong></td>
+    <td><strong>18:30</strong></td>
+    <td><strong>19:00</strong></td>
+    <td><strong>20:00</strong></td>
+    <td><strong>21:00</strong></td>  
+    <td><strong>22:00</strong></td>
+    <td><strong>22:30</strong></td>
+    <td><strong>23:00</strong></td>
+    <td><strong>1:00(*)</strong></td>
+  </tr>
 </table>
 (*) One day after.
+
 <h3 style="color:#B40431;">Time zones:</h3>
 <ul>
   <li><strong><a style="color:#B40431;">GMT-6:00</a> - </strong> Central America, US/Canada Mountain Time</li>
