--- a/programme-GMT+6.html
+++ b/programme-GMT+6.html
@@ -221,7 +221,7 @@
 	
   <tr align = "left">
     <td style="border-bottom:none;"><strong><a style="color:#B40431"; href="#THU";>THURSDAY</a></stong></td>
-    <td><strong><a style="color:#B40431;" href="#SESSION-1">1. Kim Larsen's Keynote Talk</a></strong></td>
+    <td><strong><a style="color:#B40431;" href="#SESSION-5">5. Wil van der Aalst's Keynote Talk</a></strong></td>
     <td><strong>60 min.</strong></td>  
     <td><strong>1:30</strong></td>
     <td><strong>2:30</strong></td>
@@ -245,7 +245,7 @@
   </tr>
   <tr align = "left">
     <td style="border-top:none;border-bottom:none;"><strong><a style="color:#B40431"; href="#THU";>9 September</a></strong></td>
-    <td><strong><a style="color:#B40431;" href="#SESSION-2">2. Efficient Model Checking Methods</a></strong></td>
+    <td><strong><a style="color:#B40431;" href="#SESSION-6">6. Security and Privacy</a></strong></td>
     <td><strong>90 min.</strong></td>  
     <td><strong>3:00</strong></td>
     <td><strong>4:00</strong></td>
@@ -269,7 +269,7 @@
   </tr>
   <tr align = "left">
     <td style="border-top:none;border-bottom:none;"></td>
-    <td><strong><a style="color:#B40431;" href="#SESSION-3">3. Database and Distributed Transactions</a></strong></td>
+    <td><strong><a style="color:#B40431;" href="#SESSION-7">7. Security and Privacy</a></strong></td>
     <td><strong>60 min.</strong></td>  
     <td><strong>5:30</strong></td>
     <td><strong>6:30</strong></td>
@@ -293,7 +293,7 @@
   </tr>
   <tr align = "left">
     <td style="border-top:none;border-bottom:none;"></td>
-    <td><strong><a style="color:#B40431;" href="#SESSION-4">4. Formalization and Verification in Coq and Isabelle</a></strong></td>
+    <td><strong><a style="color:#B40431;" href="#SESSION-8">8. Grigore Rosu's Keynote Talk</a></strong></td>
     <td><strong>90 min.</strong></td>  
     <td><strong>7:00</strong></td>
     <td><strong>8:00</strong></td>
@@ -315,6 +315,104 @@
     <td><strong>23:00</strong></td>
     <td><strong>1:00(*)</strong></td>
   </tr>
+	
+  <tr align = "left">
+    <td style="border-bottom:none;"><strong><a style="color:#B40431"; href="#THU";>THURSDAY</a></stong></td>
+    <td><strong><a style="color:#B40431;" href="#SESSION-9">9. Alan Dix' Keynote Talk</a></strong></td>
+    <td><strong>60 min.</strong></td>  
+    <td><strong>1:30</strong></td>
+    <td><strong>2:30</strong></td>
+    <td><strong>3:30</strong></td>
+    <td><strong>4:30</strong></td>
+    <td><strong>7:30</strong></td>
+    <td><strong>8:30</strong></td>
+    <td><strong>9:30</strong></td>
+    <td><strong>10:30</strong></td>
+    <td><strong>11:30</strong></td>
+    <td><strong>12:00</strong></td>	  
+    <td><strong>12:30</strong></td>
+    <td><strong>13:00</strong></td>
+    <td><strong>13:30</strong></td>
+    <td><strong>14:30</strong></td>
+    <td><strong>15:30</strong></td>  
+    <td><strong>16:30</strong></td>
+    <td><strong>17:00</strong></td>
+    <td><strong>17:30</strong></td>
+    <td><strong>19:30</strong></td>
+  </tr>
+  <tr align = "left">
+    <td style="border-top:none;border-bottom:none;"><strong><a style="color:#B40431"; href="#THU";>9 September</a></strong></td>
+    <td><strong><a style="color:#B40431;" href="#SESSION-10">10. Synthesis and Learning</a></strong></td>
+    <td><strong>90 min.</strong></td>  
+    <td><strong>3:00</strong></td>
+    <td><strong>4:00</strong></td>
+    <td><strong>5:00</strong></td>
+    <td><strong>6:00</strong></td>
+    <td><strong>9:00</strong></td>
+    <td><strong>10:00</strong></td>
+    <td><strong>11:00</strong></td>
+    <td><strong>12:00</strong></td>
+    <td><strong>13:00</strong></td>
+    <td><strong>13:30</strong></td>	  
+    <td><strong>14:00</strong></td>
+    <td><strong>14:30</strong></td>
+    <td><strong>15:00</strong></td>
+    <td><strong>16:00</strong></td>
+    <td><strong>17:00</strong></td>  
+    <td><strong>18:00</strong></td>
+    <td><strong>18:30</strong></td>
+    <td><strong>20:00</strong></td>
+    <td><strong>21:00</strong></td>
+  </tr>
+  <tr align = "left">
+    <td style="border-top:none;border-bottom:none;"></td>
+    <td><strong><a style="color:#B40431;" href="#SESSION-11">11. Systems Calculi and Analysis</a></strong></td>
+    <td><strong>60 min.</strong></td>  
+    <td><strong>5:30</strong></td>
+    <td><strong>6:30</strong></td>
+    <td><strong>7:30</strong></td>
+    <td><strong>8:30</strong></td>
+    <td><strong>11:30</strong></td>
+    <td><strong>12:30</strong></td>
+    <td><strong>13:30</strong></td>
+    <td><strong>14:30</strong></td>
+    <td><strong>15:30</strong></td>
+    <td><strong>16:00</strong></td>	  
+    <td><strong>16:30</strong></td>
+    <td><strong>17:00</strong></td>
+    <td><strong>17:30</strong></td>
+    <td><strong>18:30</strong></td>
+    <td><strong>19:30</strong></td>  
+    <td><strong>20:30</strong></td>
+    <td><strong>22:00</strong></td>
+    <td><strong>22:30</strong></td>
+    <td><strong>23:30</strong></td>
+  </tr>
+  <tr align = "left">
+    <td style="border-top:none;border-bottom:none;"></td>
+    <td><strong><a style="color:#B40431;" href="#SESSION-12">12. Quantum Computing</a></strong></td>
+    <td><strong>90 min.</strong></td>  
+    <td><strong>7:00</strong></td>
+    <td><strong>8:00</strong></td>
+    <td><strong>9:00</strong></td>
+    <td><strong>10:00</strong></td>
+    <td><strong>13:00</strong></td>
+    <td><strong>14:00</strong></td>
+    <td><strong>15:00</strong></td>
+    <td><strong>16:00</strong></td>
+    <td><strong>17:00</strong></td>
+    <td><strong>17:30</strong></td>	  
+    <td><strong>18:00</strong></td>
+    <td><strong>18:30</strong></td>
+    <td><strong>19:00</strong></td>
+    <td><strong>20:00</strong></td>
+    <td><strong>21:00</strong></td>  
+    <td><strong>22:00</strong></td>
+    <td><strong>22:30</strong></td>
+    <td><strong>23:00</strong></td>
+    <td><strong>1:00(*)</strong></td>
+  </tr>
+
 </table>
 (*) One day after.
 
