--- a/programme-GMT+6.html
+++ b/programme-GMT+6.html
@@ -412,6 +412,30 @@
     <td><strong>23:00</strong></td>
     <td><strong>1:00(*)</strong></td>
   </tr>
+  <tr align = "left">
+    <td style="border-top:none;border-bottom:none;"></td>
+    <td><strong><a style="color:#B40431;">CLOSING</a></strong></td>
+    <td><strong>15 min.</strong></td>  
+    <td><strong>7:30</strong></td>
+    <td><strong>8:30</strong></td>
+    <td><strong>9:30</strong></td>
+    <td><strong>10:30</strong></td>
+    <td><strong>13:30</strong></td>
+    <td><strong>14:30</strong></td>
+    <td><strong>15:30</strong></td>
+    <td><strong>16:30</strong></td>
+    <td><strong>17:30</strong></td>
+    <td><strong>18:00</strong></td>	  
+    <td><strong>18:30</strong></td>
+    <td><strong>19:00</strong></td>
+    <td><strong>19:30</strong></td>
+    <td><strong>20:30</strong></td>
+    <td><strong>21:30</strong></td>  
+    <td><strong>22:30</strong></td>
+    <td><strong>23:00</strong></td>
+    <td><strong>23:30</strong></td>
+    <td><strong>1:30(*)</strong></td>
+  </tr>
 
 </table>
 (*) One day after.
@@ -614,7 +638,7 @@
                    </tr>
                    <tr>
                     <td>
-		      <a name="SESSION-6"></a><a name="PAPER-"></a><a name="PAPER-"></a><a name="PAPER-"></a>
+		      <a name="SESSION-6"></a><a name="PAPER-1"></a><a name="PAPER-54"></a><a name="PAPER-13"></a>
                       <h3>THU 14:30-15:00 GMT+6 - SHORT BREAK</h3>
                     </td>
 		    <hr>	   
@@ -629,21 +653,21 @@
                             href=""></a>
                          The session video recording will be linked from here.
                       <ul class="text">
-                        <li><strong><a style="color:#B40431;"></a><br>
-				</strong>
+                        <li><strong><a style="color:#B40431;">Card-based Cryptographic Protocols with a Standard Deck of Cards Using Private Operations</a><br>
+				Wenjing Chu, Shuo Chen and Marcello Bonsangue</strong>
                           <a class="link"
 			     style="color:#B40431;"
                              href=""></a>
 			</li>
 			<br>
-			<li><strong><a style="color:#B40431;"></a><br>
+			<li><strong><a style="color:#B40431;">Compositional Analysis of Protocol Equivalence in the Applied pi-calculus using Quasi-Open Bisimilarity</a><br>
 			        </strong>
                           <a class="link"
 			     style="color:#B40431;"
                              href=""></a>
 	                 </li>
 			<br>
-			<li><strong><a style="color:#B40431;"></a><br>
+			<li><strong><a style="color:#B40431;">Assessing Security of Crypto-Currencies with Attack-Defense Trees: Proof of Concept and Future Directions</a><br>
 			        </strong>
                           <a class="link"
 			     style="color:#B40431;"
@@ -661,7 +685,7 @@
                   </tr>               
                   <tr>
                     <td>
-		      <a name="SESSION-7"></a><a name="PAPER-"></a><a name="PAPER-"></a>
+		      <a name="SESSION-7"></a><a name="PAPER-56"></a><a name="PAPER-17"></a>
                       <h3>WED 17:30-18:30 GMT+6 - <a style="color:#B40431;">Session 7: <a> (Chair: TBA)</h3>
 			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
 			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION SCHEDULE</a> for other time zones</strong></p>
@@ -670,14 +694,14 @@
                             href=""></a>
                          The session video recording will be linked from here.
                       <ul class="text">
-                        <li><strong><a style="color:#B40431;"></a><br>
+                        <li><strong><a style="color:#B40431;">An Incentive Mechanism for Trading Personal Data in Data Market)</a><br>
 				</strong>
                           <a class="link"
 			     style="color:#B40431;"
                              href=""></a>
 			</li>
 			<br>
-			<li><strong><a style="color:#B40431;"></a><br>
+			<li><strong><a style="color:#B40431;">Normalising Lustre Preserves Security</a><br>
 			        </strong>
                           <a class="link"
 			     style="color:#B40431;"
@@ -864,7 +888,7 @@ and the following <strong><a style="color:#B40431;">accepted papers</a></strong>
 	<li><strong><a style="color:#B40431;">Card-based Cryptographic Protocols with a Standard Deck of Cards Using Private Operations</a><br>
 		Yoshifumi Manabe and Hibiki Ono
             </strong>
-	    <br>[<a class="link" style="color:#B40431;" href="#PAPER-">presentation schedule</a>]
+	    <br>[<a class="link" style="color:#B40431;" href="#PAPER-1">presentation schedule</a>]
             <br>&nbsp;
 	</li>
 	<li><strong><a style="color:#B40431;">Learning Probabilistic Automata using Residuals</a><br>
