--- a/programme-GMT+6.html
+++ b/programme-GMT+6.html
@@ -661,7 +661,7 @@
 			</li>
 			<br>
 			<li><strong><a style="color:#B40431;">Compositional Analysis of Protocol Equivalence in the Applied pi-calculus using Quasi-Open Bisimilarity</a><br>
-			        </strong>
+			        Ross Horne, Sjouke Mauw and Semen Yurkov</strong>
                           <a class="link"
 			     style="color:#B40431;"
                              href=""></a>
@@ -920,9 +920,13 @@ and the following <strong><a style="color:#B40431;">accepted papers</a></strong>
 	    [<a class="link" style="color:#B40431;" href="#PAPER-9">presentation schedule</a>]
             <br>&nbsp;
 	</li>
-	<li><strong><a style="color:#B40431;">Assessing Security of Crypto-Currencies with Attack-Defense Trees: Proof of Concept and Future Directions</a><br>
-    Julia Eisentraut, Stephan Holzer, Katharina Klioba, Jan Kretinsky, Lukas Pin and Alexander Wagner
-    </strong>
+	<li><strong><a style="color:#B40431;">Assessing Security of Crypto-Currencies with Attack-Defense Trees: Proof of Concept and Future Directions</a>
+		<br>
+		Julia Eisentraut, Stephan Holzer, Katharina Klioba, Jan Kretinsky, Lukas Pin and Alexander Wagner
+            </strong>
+	    <br>
+	    [<a class="link" style="color:#B40431;" href="#PAPER-13">presentation schedule</a>]
+            <br>&nbsp;
 	</li>
 	<li><strong><a style="color:#B40431;">A divide & conquer approach to conditional stable model checking</a>
 		<br>
@@ -1000,14 +1004,19 @@ and the following <strong><a style="color:#B40431;">accepted papers</a></strong>
     Ryoma Senda, Yoshiaki Takata and Hiroyuki Seki
     </strong>
 	</li>
-	<li><strong><a style="color:#B40431;">Compositional Analysis of Protocol Equivalence in the Applied pi-calculus using Quasi-Open Bisimilarity</a><br>
-    Ross Horne, Sjouke Mauw and Semen Yurkov
-    </strong>
+	<li><strong><a style="color:#B40431;">Compositional Analysis of Protocol Equivalence in the Applied pi-calculus using Quasi-Open Bisimilarity</a>
+		<br>
+		Ross Horne, Sjouke Mauw and Semen Yurkov
+             </strong>
+	     [<a class="link" style="color:#B40431;" href="#PAPER-54">presentation schedule</a>]
+             <br>&nbsp;
 	</li>
-	</li>
-	<li><strong><a style="color:#B40431;">An Incentive Mechanism for Trading Personal Data in Data Market</a><br>
-    Sayan Biswas, Kangsoo Jung and Catuscia Palamidessi
-    </strong>
+	<li><strong><a style="color:#B40431;">An Incentive Mechanism for Trading Personal Data in Data Market</a>
+		<br>
+		Sayan Biswas, Kangsoo Jung and Catuscia Palamidessi
+             </strong>
+	     [<a class="link" style="color:#B40431;" href="#PAPER-17">presentation schedule</a>]
+             <br>&nbsp;
 	</li>
 </ul>
 	   
