--- a/programme-GMT+6.html
+++ b/programme-GMT+6.html
@@ -317,7 +317,7 @@
   </tr>
 	
   <tr align = "left">
-    <td style="border-bottom:none;"><strong><a style="color:#B40431"; href="#THU";>THURSDAY</a></stong></td>
+    <td style="border-bottom:none;"><strong><a style="color:#B40431"; href="#FRI";>FRIDAY</a></stong></td>
     <td><strong><a style="color:#B40431;" href="#SESSION-9">9. Alan Dix' Keynote Talk</a></strong></td>
     <td><strong>60 min.</strong></td>  
     <td><strong>1:30</strong></td>
@@ -341,7 +341,7 @@
     <td><strong>19:30</strong></td>
   </tr>
   <tr align = "left">
-    <td style="border-top:none;border-bottom:none;"><strong><a style="color:#B40431"; href="#THU";>9 September</a></strong></td>
+    <td style="border-top:none;border-bottom:none;"><strong><a style="color:#B40431"; href="#THU";>10 September</a></strong></td>
     <td><strong><a style="color:#B40431;" href="#SESSION-10">10. Synthesis and Learning</a></strong></td>
     <td><strong>90 min.</strong></td>  
     <td><strong>3:00</strong></td>
@@ -638,13 +638,13 @@
                    </tr>
                    <tr>
                     <td>
-		      <a name="SESSION-6"></a><a name="PAPER-1"></a><a name="PAPER-54"></a><a name="PAPER-13"></a>
                       <h3>THU 14:30-15:00 GMT+6 - SHORT BREAK</h3>
                     </td>
 		    <hr>	   
                   </tr>               
                  <tr>
                     <td>
+		      <a name="SESSION-6"></a><a name="PAPER-1"></a><a name="PAPER-54"></a><a name="PAPER-13"></a>
                       <h3>THU 15:00-16:30 GMT+6 - <a style="color:#B40431;">Session 6: <a> (Chair: TBA)</h3>
 			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
 			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION SCHEDULE</a> for other time zones</strong></p>
@@ -653,22 +653,25 @@
                             href=""></a>
                          The session video recording will be linked from here.
                       <ul class="text">
-                        <li><strong><a style="color:#B40431;">Card-based Cryptographic Protocols with a Standard Deck of Cards Using Private Operations</a><br>
+                        <li><strong><a style="color:#B40431;">Card-based Cryptographic Protocols with a Standard Deck of Cards Using Private Operations</a>
+				<br>
 				Wenjing Chu, Shuo Chen and Marcello Bonsangue</strong>
                           <a class="link"
 			     style="color:#B40431;"
                              href=""></a>
 			</li>
 			<br>
-			<li><strong><a style="color:#B40431;">Compositional Analysis of Protocol Equivalence in the Applied pi-calculus using Quasi-Open Bisimilarity</a><br>
+			<li><strong><a style="color:#B40431;">Compositional Analysis of Protocol Equivalence in the Applied pi-calculus using Quasi-Open Bisimilarity</a>
+				<br>
 			        Ross Horne, Sjouke Mauw and Semen Yurkov</strong>
                           <a class="link"
 			     style="color:#B40431;"
                              href=""></a>
 	                 </li>
 			<br>
-			<li><strong><a style="color:#B40431;">Assessing Security of Crypto-Currencies with Attack-Defense Trees: Proof of Concept and Future Directions</a><br>
-			        </strong>
+			<li><strong><a style="color:#B40431;">Assessing Security of Crypto-Currencies with Attack-Defense Trees: Proof of Concept and Future Directions</a>
+				<br>
+			        Julia Eisentraut, Stephan Holzer, Katharina Klioba, Jan Kretinsky, Lukas Pin and Alexander Wagner</strong>
                           <a class="link"
 			     style="color:#B40431;"
                              href=""></a>
@@ -695,7 +698,7 @@
                          The session video recording will be linked from here.
                       <ul class="text">
                         <li><strong><a style="color:#B40431;">An Incentive Mechanism for Trading Personal Data in Data Market)</a><br>
-				</strong>
+				Sayan Biswas, Kangsoo Jung and Catuscia Palamidessi</strong>
                           <a class="link"
 			     style="color:#B40431;"
                              href=""></a>
@@ -743,7 +746,7 @@
                    <tr>
                     <td>
 		       <a name="SESSION-9"></a>
-                       <h3>DFRI 13:30-14:30 GMT+6 - <a style="color:#B40431;">Session 9 (Keynote Speaker): Alan Dix</a>
+                       <h3>FRI 13:30-14:30 GMT+6 - <a style="color:#B40431;">Session 9 (Keynote Speaker): Alan Dix</a>
 			    (Chair: Antonio Cerone)</h3>
 			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
 			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION SCHEDULE</a> for other time zones</strong></p>
@@ -765,7 +768,8 @@
                   </tr>               
                  <tr>
                     <td>
-                      <h3>WED 15:00-16:30 GMT+6 - <a style="color:#B40431;">Session 2: <a> (Chair: TBA)</h3>
+		      <a name="SESSION-10"></a><a name="PAPER-"></a><a name="PAPER-"></a>
+                      <h3>FRI 15:00-16:30 GMT+6 - <a style="color:#B40431;">Session 10: <a> (Chair: TBA)</h3>
 			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
 			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION. SCHEDULE</a> for other time zones</strong></p>
                          <a class="link"
@@ -805,7 +809,8 @@
                   </tr>               
                   <tr>
                     <td>
-                      <h3>WED 17:30-18:30 GMT+6 - <a style="color:#B40431;">Session 3: <a> (Chair: TBA)</h3>
+		      <a name="SESSION-7"></a><a name="PAPER-56"></a><a name="PAPER-17"></a>
+                      <h3>FRI 17:30-18:30 GMT+6 - <a style="color:#B40431;">Session 3: <a> (Chair: TBA)</h3>
 			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
 			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION. SCHEDULE</a> for other time zones</strong></p>
                          <a class="link"
@@ -819,6 +824,13 @@
 			     style="color:#B40431;"
                              href=""></a>
 			</li>
+			<br>
+			<li><strong><a style="color:#B40431;"></a><br>
+			        </strong>
+                          <a class="link"
+			     style="color:#B40431;"
+                             href=""></a>
+	                 </li>
 			<br>
 			<li><strong><a style="color:#B40431;"></a><br>
 			        </strong>
@@ -832,13 +844,8 @@
                   </tr>
                   <tr>
                     <td>
-                       <h3>FRI 18:30-19:00 GMT+6 - SHORT BREAK</h3>
-                    </td>
-		    <hr>	   
-                  </tr>               
-                  <tr>
-                    <td>
-                      <h3>WED 19:00-20:30 GMT+6 - <a style="color:#B40431;">Session 4: <a> (Chair: TBA)</h3>
+ 		     <a name="SESSION-7"></a><a name="PAPER-"></a><a name="PAPER-"></a>
+                     <h3>FRI 19:00-20:30 GMT+6 - <a style="color:#B40431;">Session 4: <a> (Chair: TBA)</h3>
 			 <p class="text">The indicated times refer to <strong>East Kazakhstan time zone</strong>.
 			   See the <strong><a style="color:#B40431;" href="#SCHEDULE">SESSION. SCHEDULE</a> for other time zones</strong></p>
                          <a class="link"
@@ -852,20 +859,6 @@
 			     style="color:#B40431;"
                              href=""></a>
 			</li>
-			<br>
-			<li><strong><a style="color:#B40431;"></a><br>
-			        </strong>
-                          <a class="link"
-			     style="color:#B40431;"
-                             href=""></a>
-	                 </li>
-			<br>
-			<li><strong><a style="color:#B40431;"></a><br>
-			        </strong>
-                          <a class="link"
-			     style="color:#B40431;"
-                             href=""></a>
-	                 </li>								       										       
                       </ul>
                     </td>
 		    <hr>			    
